--- a/index.html
+++ b/index.html
@@ -2859,6 +2859,8 @@
   </span><span class="nl">"tags"</span><span class="p">:</span><span class="w"> </span><span class="p">[</span><span class="s2">"Sorcerer"</span><span class="p">,</span><span class="w"> </span><span class="s2">"Wizard"</span><span class="p">]</span><span class="w">
 </span><span class="p">}</span><span class="w">
 </span></code></pre></div>
+<p>When importing a character with spells, if the name of the spell matches a spell in the SRD, the SRD data will be used. Otherwise, the spell will be imported as a custom spell.</p>
+
 <table><thead>
 <tr>
 <th>Attribute</th>
