deploy: 52947d28bb1dbf528f5d0315acc7eb0295b6d7b3

--- a/index.html
+++ b/index.html
@@ -2377,7 +2377,7 @@
 </span></code></pre></div>
 <p>The <a href="#character"><code>Character</code></a> object represents a player or non-player character on Alchemy.</p>
 
-<p>When creating a character for 5d, note that SRD spells can simply be an object with the <code>name</code> property set to the name of the spell rather than a full <a href="#spell"><code>Spell</code></a> object. If the spell name matches an existing SRD spell (case-insensitive), it will be added to the character.</p>
+<p>When creating a character for 5e, note that SRD spells can simply be an object with the <code>name</code> property set to the name of the spell rather than a full <a href="#spell"><code>Spell</code></a> object. If the spell name matches an existing SRD spell (case-insensitive), it will be added to the character.</p>
 
 <table><thead>
 <tr>
