deploy: d51ef96fe313b6fb7f7a1fec3251b7989593d669

--- a/index.html
+++ b/index.html
@@ -293,6 +293,16 @@
     <script>
       $(function() { setupCodeCopy(); });
     </script>
+    <!-- Begin Alchemy Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RPCFF13P0L"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-RPCFF13P0L');
+    </script>
+    <!-- End Alchemy Google tag (gtag.js) -->
   </head>
 
   <body class="index" data-languages="[&quot;json&quot;]">
